--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,24 +3,22 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
-
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
+          <ion-list-header>Menu</ion-list-header>
+          <ion-note>valeandre@ipvc.pt</ion-note>
+          
+          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Pessoal()">
+            <ion-icon slot="start" name="person-outline"></ion-icon>
+            Apresentação Pessoal
+          </ion-button>    
+          
+          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
+            <ion-icon slot="start" name="mail"></ion-icon>
+            Apresentação da localidade
+          </ion-button>    
+          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
+            <ion-icon slot="start" name="mail"></ion-icon>
+            Outras informações
+          </ion-button>        
         </ion-list>
       </ion-content>
     </ion-menu>
