--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,9 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+.transparent {
+  background-color: transparent !important;
+  color: inherit !important;
+  box-shadow: none !important;
+}
