--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,10 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Menu</ion-list-header>
-          <ion-note>valeandre@ipvc.pt</ion-note>
-          
-          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Pessoal()">
-            <ion-icon slot="start" name="person-outline"></ion-icon>
-            Apresentação Pessoal
-          </ion-button>    
+          <ion-note>valeandre@ipvc.pt</ion-note>   
           
           <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
-            <ion-icon slot="start" name="mail"></ion-icon>
+            <ion-icon slot="start" name="location-outline"></ion-icon>
             Apresentação da localidade
           </ion-button>    
           <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
