--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -3,19 +3,21 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
+      <ion-title size="default">André Alves do Vale</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <ion-img src="assets/IMG.jpg" class="alterar-imagem"></ion-img> 
+  <div style="padding: 20px;">  
+      <ion-text class="texto-formatado">
+        <p>Olá, meu nome é André e sou um estudante de Licenciatura em Engenharia Informática no Instituto Politécnico de Viana do castelo.</p> 
+        <p>Estou atualmente no 2ºAno do curso e estou muito animado para continuar a aprender e desenvolver minhas capacidades em programação. No meu tempo livre, gosto de tentar jogar futebol e sair com os amigos.</p>
+        <p>Meu objetivo é concluir o curso com grande aproveitamento para aplicar na prática no futuro, contudo, é preciso dedicar muito fora do ambiente escolar.</p>
+      </ion-text>
   </div>
 </ion-content>
