--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -26,3 +26,11 @@ ion-menu-button {
 #container a {
   text-decoration: none;
 }
+
+.alterar-imagem {
+  display: block;
+    margin: 0 auto;
+    max-width: 60%;
+    border-radius: 10px;
+    border: 5px solid rgb(255, 255, 255);
+}
