--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,24 @@
           <ion-list-header>Menu</ion-list-header>
           <ion-note>valeandre@ipvc.pt</ion-note>   
           
-          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
+          <ion-button class="Apresentação de localidade" color="transparent" (click)="verApresentacao_Localidade()">
             <ion-icon slot="start" name="location-outline"></ion-icon>
             Apresentação da localidade
-          </ion-button>    
-          <ion-button class="Apresentação de localidade" color=".transparent" (click)="verApresentacao_Localidade()">
+          </ion-button> 
+             
+          <ion-button class="Outras informações" color="transparent" (click)="verApresentacao_Localidade()">
             <ion-icon slot="start" name="mail"></ion-icon>
             Outras informações
-          </ion-button>        
+          </ion-button>         
         </ion-list>
       </ion-content>
+      
+      <ion-footer>
+        <ion-button class="Sair" color="transparent" (click)="verIniciar()"style="margin-top: auto;">
+          <ion-icon name="log-out" slot="start"></ion-icon>
+          Sair
+        </ion-button>
+      </ion-footer>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
