--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -12,11 +12,11 @@
       <ion-title size="default">André Alves do Vale</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-img src="assets/IMG.jpg" class="alterar-imagem"></ion-img> 
+  <ion-img src="assets/foto.jpg" class="alterar-imagem"></ion-img> 
   <div style="padding: 20px;">  
-      <ion-text class="texto-formatado">
+      <ion-text>
         <p>Olá, meu nome é André e sou um estudante de Licenciatura em Engenharia Informática no Instituto Politécnico de Viana do castelo.</p> 
-        <p>Estou atualmente no 2ºAno do curso e estou muito animado para continuar a aprender e desenvolver minhas capacidades em programação. No meu tempo livre, gosto de tentar jogar futebol e sair com os amigos.</p>
+        <p>Estou atualmente no 2ºAno do curso e estou muito animado para continuar a aprender e desenvolver minhas capacidades em programação. No meu tempo livre, gosto de tentar jogar futebol e sair com amigos.</p>
         <p>Meu objetivo é concluir o curso com grande aproveitamento para aplicar na prática no futuro, contudo, é preciso dedicar muito fora do ambiente escolar.</p>
       </ion-text>
   </div>
