add page "personalidades" and compose

--- a/src/app/apresentacao-localidade/apresentacao-localidade.page.html
+++ b/src/app/apresentacao-localidade/apresentacao-localidade.page.html
@@ -9,14 +9,20 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="default">Apresentação Localidade</ion-title>
+      <ion-title size="large">Gemeses</ion-title>      
     </ion-toolbar>
   </ion-header>
-
-  <ion-button expand="block" color="primary" (click)="turistico()">Pontos de interesse turísticos</ion-button>
-  <ion-button expand="block" color="primary" (click)="personalidades()">Personalidades</ion-button>
-  <ion-button expand="block" color="primary" (click)="clubesDesportivos()">Clubes desportivos</ion-button>
-  <ion-button expand="block" color="primary" (click)="informacoes()">informações de caraterização</ion-button>
-  
-
+  <br>
+  <img src="assets/images/gemeses.jpg" style="text-align: center;" class="alterar-imagem">
+  <br>
+  <br>
+  <br>
+  <br>
+  <ion-button class="my-button" expand="block" (click)="turistico()">Pontos de interesse turísticos</ion-button>
+  <br>
+  <ion-button class="my-button" expand="block" (click)="personalidades()">Personalidades</ion-button>
+  <br>
+  <ion-button class="my-button" expand="block" (click)="clubesDesportivos()">Clubes desportivos</ion-button>
+  <br>
+  <ion-button class="my-button" expand="block" (click)="informacoes()">informações de caraterização</ion-button>
 </ion-content>
