--- a/src/app/inicial/inicial.page.html
+++ b/src/app/inicial/inicial.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Meu App
+      Trabalho Prático IHM 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <h1>Bem-vindo(a)!</h1>
-  <p>Esta é a minha aplicação pessoal.</p>
-  
-  <ion-button expand="block" color="primary" (click)="iniciarAplicacao()">Iniciar</ion-button>
+
+  <ion-img src="assets/images/gemeses.jpg" class="alterar-imagem"></ion-img>
+
+  <p>Venha connosco conhecer Gemeses, Uma das freguesias do concelho de Esposende.</p>
+  <p>Aplicação realizada no âmbito da disciplina de Interação Homem Máquina.</p>
+  <ion-button class="my-button" expand="block"  (click)="iniciarAplicacao()">Começar</ion-button>
 </ion-content>
