--- a/src/app/turistico/turistico.page.html
+++ b/src/app/turistico/turistico.page.html
@@ -5,27 +5,24 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Ponto Turístico</ion-title>
     </ion-toolbar>
   </ion-header>
-
   <h4 class="subtitulo"> Barca do Lago</h4>
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/pontoTuristico3.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico3.jpg" (click)="proximaImagem()"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/pontoTuristico.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico.jpg" (click)="proximaImagem()"></ion-img>
       </ion-col>
     </ion-row>
-        <ion-img src="assets/pontoTuristico2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico2.jpg" (click)="proximaImagem()"></ion-img>
   </ion-grid>
-
   <div style="padding: 20px;">  
     <ion-text>
       <p>A barca do lago, era um dos locais de passagem do rio desde os tempos romanos em que se conseguia fazer a travessia a pé.</p> 
