--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,27 +4,28 @@
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Menu</ion-list-header>
-          <ion-note>valeandre@ipvc.pt</ion-note>   
+          <ion-note>
+            <ion-icon slot="start" name="mail-outline"></ion-icon>
+            valeandre@ipvc.pt
+          </ion-note>   
           
           <ion-button class="Apresentação de localidade" color="transparent" (click)="verApresentacao_Localidade()">
-            <ion-icon slot="start" name="location-outline"></ion-icon>
+            <ion-icon slot="start" name="location"></ion-icon>
             Apresentação da localidade
           </ion-button> 
              
           <ion-button class="Outras informações" color="transparent" (click)="verApresentacao_Localidade()">
-            <ion-icon slot="start" name="mail"></ion-icon>
+            <ion-icon slot="start" name="information-circle"></ion-icon>
             Outras informações
-          </ion-button>         
-        </ion-list>
-      </ion-content>
-      
-      <ion-footer>
-        <ion-button class="Sair" color="transparent" (click)="verIniciar()"style="margin-top: auto;">
-          <ion-icon name="log-out" slot="start"></ion-icon>
+          </ion-button>
+          
+          <ion-item class="Sair" color="transparent" (click)="verIniciar()"style="margin-top: auto;">
+          <ion-icon name="log-out-outline" slot="start"></ion-icon>
           Sair
-        </ion-button>
-      </ion-footer>
+          </ion-item>       
+        </ion-list>
+      </ion-content>     
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
