--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -85,7 +85,7 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
+    --ion-color-primary: #ffffff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
@@ -155,7 +155,7 @@
    */
 
   .ios body {
-    --ion-background-color: #1a1c1b;
+    --ion-background-color: #1b1c1b;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -242,4 +242,8 @@
     margin-right: -10px;
     padding: 20px;
   }
+
+  ion-back-button {
+    --color: #ffff;
+  }  
 }
