--- a/src/app/clubes-desportivos/clubes-desportivos.page.html
+++ b/src/app/clubes-desportivos/clubes-desportivos.page.html
@@ -10,7 +10,45 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">clubesDesportivos</ion-title>
+      <ion-title size="large">Clube Desportivo</ion-title>
     </ion-toolbar>
   </ion-header>
+  <h4 class="subtitulo">GCDR de Gemeses</h4>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-img src="assets/images/GCDR.jpeg" (click)="proximaImagem()"></ion-img>
+      </ion-col>
+      <ion-col size="6">
+        <ion-img src="assets/images/GCDR2.jpg" (click)="proximaImagem()"></ion-img>
+      </ion-col>
+    </ion-row>
+        <ion-img src="assets/images/GCDR3.jpg" (click)="proximaImagem()"></ion-img>
+  </ion-grid>
+  <div style="padding: 20px;">  
+    <ion-text>
+      <p>O Grupo Cultural Desportivo e Recreativo de Gemeses foi fundado em 1984 e dedicam-se em que a sua principal atividade desportiva e única é a canoagem.</p> 
+      <p>O clube desportivo já formou atletas que estão no alto patamar tais como:</p>
+      <p> - Teresa Portela</p>
+      <p> - João Ribeiro</p>
+      </ion-text>
+  </div>
+  <h4 class="subtitulo">Associação Speedy Forever</h4>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-img src="assets/images/associacao.jpg" (click)="proximaImagem()"></ion-img>
+      </ion-col>
+      <ion-col size="6">
+        <ion-img src="assets/images/associacao3.jpg" (click)="proximaImagem()"></ion-img>
+      </ion-col>
+    </ion-row>
+        <ion-img src="assets/images/associacao2.jpg" (click)="proximaImagem()"></ion-img>
+  </ion-grid>
+  <div style="padding: 20px;">  
+    <ion-text>
+      <p>A associação Speedy forever foi criado com o objetivo de dinamizar projetos e atividades de âmbito social, educativo, recreativo, cultural, económico e desportivo para os seus associados e restante comunidade, principalmente crianças e jovens.</p> 
+      <p>Esta associação é em memória do piloto Paulo Gonçalves que foi sempre conhecido pela sua solidariedade e simpatia. Com esta associaçao, garante-se que a sua memória não será perdida bem como as ideologias do piloto.</p>
+      </ion-text>
+  </div>
 </ion-content>
