add page "informacoes-caracterizacao" and compose

--- a/src/app/apresentacao-localidade/apresentacao-localidade.page.html
+++ b/src/app/apresentacao-localidade/apresentacao-localidade.page.html
@@ -18,11 +18,11 @@
   <br>
   <br>
   <br>
-  <ion-button class="my-button" expand="block" (click)="turistico()">Pontos de interesse turísticos</ion-button>
+  <ion-button class="my-button" expand="block" (click)="turistico()">Pontos de interesses turísticos</ion-button>
   <br>
   <ion-button class="my-button" expand="block" (click)="personalidades()">Personalidades</ion-button>
   <br>
-  <ion-button class="my-button" expand="block" (click)="clubesDesportivos()">Clubes desportivos</ion-button>
+  <ion-button class="my-button" expand="block" (click)="clubesDesportivos()">Clubes Desportivos</ion-button>
   <br>
-  <ion-button class="my-button" expand="block" (click)="informacoes()">informações de caraterização</ion-button>
+  <ion-button class="my-button" expand="block" (click)="informacoesCaracterizacao()">informações de caraterização</ion-button>
 </ion-content>
