add page "outras-informacoes" and compose

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             Apresentação da localidade
           </ion-button> 
              
-          <ion-button class="Outras informações" color="transparent" (click)="verApresentacao_Localidade()">
+          <ion-button class="Outras informações" color="transparent" (click)="verOutrasInformacoes()">
             <ion-icon slot="start" name="information-circle"></ion-icon>
             Outras informações
           </ion-button>
