add icons page "outras-informacoes"

--- a/src/app/outras-informacoes/outras-informacoes.page.html
+++ b/src/app/outras-informacoes/outras-informacoes.page.html
@@ -15,24 +15,24 @@
   <h4 class="subtitulo">GCDR de Gemeses</h4>
   <div style="padding: 20px;">  
     <ion-text>
-      <p>Contacto: 917928476</p> 
-      <p>Morada: Rua da Ribeira, nº7 Gemeses 4740-494 Esposende</p>
-      <p>Email: gemesesgcdr@gmail.com</p>
-      <p>Facebook: https://www.facebook.com/profile.php?id=100068125129199</p>
-      <p>Instagram: https://www.instagram.com/gcdr_gemeses/</p>
+      <p><ion-icon name="call"></ion-icon>&nbsp; Contacto: 917928476</p> 
+      <p><ion-icon name="home"></ion-icon>&nbsp; Morada: Rua da Ribeira, nº7 Gemeses 4740-494 Esposende</p>
+      <p><ion-icon name="mail"></ion-icon>&nbsp; Email: gemesesgcdr@gmail.com</p>
+      <p><ion-icon name="logo-facebook"></ion-icon>&nbsp; Facebook: Grupo Cultural Desportivo e Recreativo de Gemeses</p>
+      <p><ion-icon name="logo-instagram"></ion-icon>&nbsp; Instagram: gcdr_gemeses</p>
     </ion-text>
   </div>
   <h4 class="subtitulo">Junta de Freguesia de Gemeses</h4>
   <div style="padding: 20px;">  
     <ion-text>
-      <p>Presidente: Eduardo Oliveira Maia</p> 
-      <p>Secretária: Fátima Andreia Lopes Fernandes do Vale</p>
-      <p>Tesoureiro: Sandra Mónica Pereira dos Santos Arantes</p>
+      <p><ion-icon name="person-circle-outline"></ion-icon>&nbsp; Presidente: Eduardo Oliveira Maia</p> 
+      <p><ion-icon name="person-circle-outline"></ion-icon>&nbsp; Secretária: Fátima Andreia Lopes Fernandes do Vale</p>
+      <p><ion-icon name="person-circle-outline"></ion-icon>&nbsp; Tesoureiro: Sandra Mónica Pereira dos Santos Arantes</p>
       <br>
       <p>Contacto: 253966205</p>
-      <p>Morada: Avenida da Igreja, nº19 4740-495 Gemeses</p>
-      <p>Email: geral@freg-gemeses.com / eduardopresidentegemeses@gmail.com</p>
-      <p>website: www.jf-gemeses.pt</p>
+      <p><ion-icon name="home"></ion-icon>&nbsp; Morada: Avenida da Igreja, nº19 4740-495 Gemeses</p>
+      <p><ion-icon name="mail"></ion-icon>&nbsp; Email: geral@freg-gemeses.com / eduardopresidentegemeses@gmail.com</p>
+      <p><ion-icon name="globe-outline"></ion-icon>&nbsp; website: www.jf-gemeses.pt</p>
       </ion-text>
   </div>
 </ion-content>
