minor adjustments to spelling errors

--- a/src/app/outras-informacoes/outras-informacoes.page.html
+++ b/src/app/outras-informacoes/outras-informacoes.page.html
@@ -29,7 +29,7 @@
       <p><ion-icon name="person-circle-outline"></ion-icon>&nbsp; Secretária: Fátima Andreia Lopes Fernandes do Vale</p>
       <p><ion-icon name="person-circle-outline"></ion-icon>&nbsp; Tesoureiro: Sandra Mónica Pereira dos Santos Arantes</p>
       <br>
-      <p>Contacto: 253966205</p>
+      <p><ion-icon name="call"></ion-icon>&nbsp; Contacto: 253966205</p>
       <p><ion-icon name="home"></ion-icon>&nbsp; Morada: Avenida da Igreja, nº19 4740-495 Gemeses</p>
       <p><ion-icon name="mail"></ion-icon>&nbsp; Email: geral@freg-gemeses.com / eduardopresidentegemeses@gmail.com</p>
       <p><ion-icon name="globe-outline"></ion-icon>&nbsp; website: www.jf-gemeses.pt</p>
