--- a/src/app/personalidades/personalidades.page.html
+++ b/src/app/personalidades/personalidades.page.html
@@ -25,7 +25,7 @@
   </ion-grid>
   <div style="padding: 20px;">  
     <ion-text>
-      <p>O Paulo Gonçalves foi um piloto português, nascido em Gemeses, concelho de Esposende a 5 de Fevereiro de 1979. Foi uma figura do mundo do rally, especialmente do Rally Dakar, a maior corrida de rally do mundo</p> 
+      <p>O Paulo Gonçalves foi um piloto português, nascido em Gemeses, concelho de Esposende a 5 de Fevereiro de 1979. Foi uma figura do mundo do rally, especialmente do Rally Dakar, a maior corrida de rally do mundo.</p> 
       <p>Paulo Gonçalves competiu em vários rallys internacionais sendo que a sua melhor classificação foi segundo lugar geral em 2015. Em 2020, durante o Rally Dakar, ele sofreu um acidente na sétima etapa da corrida e não conseguiu resistir.</p>
       <p>Ele foi homenageado pela sua freguesia colocando uma rua em seu nome chamando assim, Rua Paulo Gonçalves. Foi criado uma associação speedy forever para ajudar jovens pilotos em Portugal e ajudar a melhorar a segurança em competições de rally.</p>
     </ion-text>
