--- a/src/app/apresentacao-localidade/apresentacao-localidade.page.html
+++ b/src/app/apresentacao-localidade/apresentacao-localidade.page.html
@@ -24,5 +24,5 @@
   <br>
   <ion-button class="my-button" expand="block" (click)="clubesDesportivos()">Clubes Desportivos</ion-button>
   <br>
-  <ion-button class="my-button" expand="block" (click)="informacoesCaracterizacao()">informações de caraterização</ion-button>
+  <ion-button class="my-button" expand="block" (click)="informacoesCaracterizacao()">Informações de caraterização</ion-button>
 </ion-content>
