Add tittle toolbar and organize code

--- a/src/app/apresentacao-localidade/apresentacao-localidade.page.html
+++ b/src/app/apresentacao-localidade/apresentacao-localidade.page.html
@@ -1,15 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
+    <ion-title>Apresentação da Localidade</ion-title>
   </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Gemeses</ion-title>      
+      <ion-title size="large">Apresentação da Localidade</ion-title>      
     </ion-toolbar>
   </ion-header>
   <br>
