--- a/src/app/clubes-desportivos/clubes-desportivos.page.html
+++ b/src/app/clubes-desportivos/clubes-desportivos.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>clubesDesportivos</ion-title>
+    <ion-title>Clubes Desportivos</ion-title>
   </ion-toolbar>
 </ion-header>
 
