--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,15 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+      <ion-title>Apresentação Pessoal</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="default">André Alves do Vale</ion-title>
+      <ion-title size="default">Apresentação Pessoal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-img src="assets/images/foto.jpg" class="alterar-imagem"></ion-img> 
