--- a/src/app/outras-informacoes/outras-informacoes.page.html
+++ b/src/app/outras-informacoes/outras-informacoes.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-title>Outras Informações</ion-title>
   </ion-toolbar>
 </ion-header>
 
