--- a/src/app/personalidades/personalidades.page.html
+++ b/src/app/personalidades/personalidades.page.html
@@ -3,8 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-title>Personalidades</ion-title>
   </ion-toolbar>
 </ion-header>
+  
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
