--- a/src/app/clubes-desportivos/clubes-desportivos.page.html
+++ b/src/app/clubes-desportivos/clubes-desportivos.page.html
@@ -17,13 +17,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/images/GCDR.jpeg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/GCDR.jpeg"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/images/GCDR2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/GCDR2.jpg"></ion-img>
       </ion-col>
     </ion-row>
-        <ion-img src="assets/images/GCDR3.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/GCDR3.jpg"></ion-img>
   </ion-grid>
   <div style="padding: 20px;">  
     <ion-text>
@@ -37,13 +37,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/images/associacao.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/associacao.jpg"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/images/associacao3.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/associacao3.jpg"></ion-img>
       </ion-col>
     </ion-row>
-        <ion-img src="assets/images/associacao2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/associacao2.jpg"></ion-img>
   </ion-grid>
   <div style="padding: 20px;">  
     <ion-text>
