--- a/src/app/turistico/turistico.page.html
+++ b/src/app/turistico/turistico.page.html
@@ -17,13 +17,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/images/pontoTuristico3.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico3.jpg"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/images/pontoTuristico.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico.jpg"></ion-img>
       </ion-col>
     </ion-row>
-        <ion-img src="assets/images/pontoTuristico2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/pontoTuristico2.jpg"></ion-img>
   </ion-grid>
   <div style="padding: 20px;">  
     <ion-text>
