--- a/src/app/personalidades/personalidades.page.html
+++ b/src/app/personalidades/personalidades.page.html
@@ -17,12 +17,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/images/paulo_goncalves.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/paulo_goncalves.jpg"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/images/paulo_goncalves2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/paulo_goncalves2.jpg"></ion-img>
       </ion-col>
-        <ion-img src="assets/images/paulo_goncalves3.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/paulo_goncalves3.jpg"></ion-img>
     </ion-row>
   </ion-grid>
   <div style="padding: 20px;">  
@@ -36,12 +36,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-img src="assets/images/teresa_portela3.jpeg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/teresa_portela3.jpeg"></ion-img>
       </ion-col>
       <ion-col size="6">
-        <ion-img src="assets/images/teresa_portela2.jpg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/teresa_portela2.jpg"></ion-img>
       </ion-col>
-        <ion-img src="assets/images/teresa_portela.jpeg" (click)="proximaImagem()"></ion-img>
+        <ion-img src="assets/images/teresa_portela.jpeg"></ion-img>
     </ion-row>
   </ion-grid>
   <div style="padding: 20px;">  
